added credit and trade

--- a/index.html
+++ b/index.html
@@ -343,6 +343,164 @@
       </div>
     </div>
   </section>
+  <section class="credit section banner">
+    <div class="container">
+      <div class="section__upper">
+        <h2 class="section__title">Автокредит</h2>
+      </div>
+    </div>
+    <div class="credit__bg banner__bg">
+      <div class="container">
+        <div class="banner__cont credit__cont">
+          <span class="banner__title credit__title">Специальные условия по 
+            кредиту со ставкой от 4,9%</span>
+        </div>
+        <ul class="credit__list">
+          <li class="credit__list-item">
+            <img src="./img/credit-arrow.svg" alt="icon">
+            <span>Дополнительная скидка <b> до 70 000 ₽ </b></span>
+          </li>
+          <li class="credit__list-item">
+            <img src="./img/credit-arrow.svg" alt="icon">
+            <span>Без <b>первоначального взноса</b></span>
+          </li>
+          <li class="credit__list-item">
+            <img src="./img/credit-arrow.svg" alt="icon">
+            <span>Оформление по <b>2-м документам</b></span>
+          </li>
+          <li class="credit__list-item">
+            <img src="./img/credit-arrow.svg" alt="icon">
+            <span>Досрочное погашение <b>без штрафов</b></span>
+          </li>
+        </ul>
+        <form action="" class="banner__form">
+          <div class="banner__form-inputs">
+            <input type="text" class="banner__form-input" placeholder="Имя" name="name">
+            <input type="text" class="banner__form-input" placeholder="+7(___) ___-__-__" name="phone" required>
+          </div>
+          <div class="banner__btn credit__btn">
+            <button class="btn bg_blue banner__button">Получить предложение</button>
+            <div class="form-checkbox">
+              <label class="checkbox__input-text" for="check-credit-pop">
+                <span class="checkbox">
+                  <input class="form__input-check" type="checkbox" id="check-credit-pop" checked="" required="">
+                  <span class="custom-checkbox"></span>
+                </span>
+                <span class="checkbox-text">
+                  Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+                </span>
+              </label>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
+  <section class="trade banner section">
+    <div class="container">
+      <div class="section__upper">
+        <h2 class="section__title">Trade-in</h2>
+      </div>
+    </div>
+    <div class="trade__bg">
+      <div class="container">
+        <span class="trade__title banner__title">
+          Новая Jetta в Trade-In с 
+выгодой до 300 000₽
+        </span>
+        <div class="trade__list">
+          <img class="trade__line desk_hide" src="./img/trade-line_mob.svg" alt="line">
+          <div class="trade__list-item margin_1">
+            <div class="">
+              <div class="trade__list-ball">
+                <div class="trade__list-ball-bg">
+                  <span class="trade__list-ball-text">1</span>
+                </div>
+              </div>
+            </div>
+            <span class="trade__list-text left margin_1">
+              Сдаете 
+                  Ваш старый 
+                  автомобиль
+            </span>
+          </div>
+          <div class="trade__list-item margin_2">
+            <div class="">
+              <div class="trade__list-ball">
+                <div class="trade__list-ball-bg">
+                  <span class="trade__list-ball-text">2</span>
+                </div>
+              </div>
+            </div>
+            <span class="trade__list-text center margin_2">
+              Мы проводим 
+              бесплатную 
+              оценку
+            </span>
+          </div>
+          <div class="trade__list-item">
+            <div class="">
+              <div class="trade__list-ball">
+                <div class="trade__list-ball-bg">
+                  <span class="trade__list-ball-text">3</span>
+                </div>
+              </div>
+            </div>
+            <span class="trade__list-text center margin_3">
+              при 
+              необходимости 
+              доплачиваете 
+              разницу</span>
+          </div>
+          <div class="trade__list-item margin_4">
+            <div class="">
+              <div class="trade__list-ball">
+                <div class="trade__list-ball-bg">
+                  <span class="trade__list-ball-text">4</span>
+                </div>
+              </div>
+            </div>
+            <span class="trade__list-text right margin_4">
+              уезжаете 
+              на новом 
+              автомобиле
+            </span>
+          </div>
+        </div>
+        <form action="" class="trade__form banner_form">
+          <div class="banner__inputs">
+            <input type="tel" placeholder="+7(___) ___-__-__" name="phone" class="banner__form-input" required>
+          </div>
+          <div class="banner__btns">
+            <button class="banner__button btn bg_blue">Подробнее</button>
+            <div class="form-checkbox mob_hide">
+              <label class="checkbox__input-text" for="check-trade-pop">
+                <span class="checkbox">
+                  <input class="form__input-check" type="checkbox" id="check-trade-pop" checked="" required="">
+                  <span class="custom-checkbox"></span>
+                </span>
+                <span class="checkbox-text">
+                  Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+                </span>
+              </label>
+            </div>
+          </div>
+          <div class="form-checkbox desk_hide">
+            <label class="checkbox__input-text" for="check-trade-pop">
+              <span class="checkbox">
+                <input class="form__input-check" type="checkbox" id="check-trade-pop" checked="" required="">
+                <span class="custom-checkbox"></span>
+              </span>
+              <span class="checkbox-text">
+                Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+              </span>
+            </label>
+          </div>
+        </form>
+      </div>
+      <img class="trade__line mob_hide" src="./img/trade-line_desk.svg" alt="line">
+    </div>
+  </section>
   <!-- <footer class="footer">
     <div class="container">
       <div class="footer__container">
