--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <span class="time-count__text">секунд</span>
           </div>
         </div>
-        <button class="btn actions__btn bg_blue">Зафиксировать скидку</button>
+        <button class="btn actions__btn bg_blue" data-fancybox data-src="#modalSpecial">Зафиксировать скидку</button>
       </div>
     </div>
   </section>
@@ -280,6 +280,7 @@
         <div class="">
           <div class="equips__select">
             <select name="" id="">
+              <option value="">Модель</option>
               <option value="">Модель</option>
               <!-- {% for model in models %}
                <option value="{{model.id}}">{{model.title | replace({'New': ""})}}</option>
@@ -501,7 +502,31 @@
       <img class="trade__line mob_hide" src="./img/trade-line_desk.svg" alt="line">
     </div>
   </section>
-  <!-- <footer class="footer">
+  <section class="contacts" id="contact">
+    <div class="contacts__bg"></div>
+    <div class="container">
+      <div class="section__upper contacts__upper">
+        <h2 class="section__title">Контакты</h2>
+      </div>
+      <div class="contacts__cont">
+        <ul class="contacts__list">
+          <li class="contacts__list-item">Ежедневно с 08.00 до 21.00</li>
+          <li class="contacts__list-item">
+            <a href="tel:+ 7 (495) 111-11-1" class="contacts__list-link">
+              <img src="./img/footer-phone.svg" alt="icon">
+              <span>+ 7 (495) 111-11-11</span>
+            </a>
+          </li>
+          <li class="contacts__list-item">
+            <img src="./img/footer-local.svg" alt="icon">
+            <span>33 км мкад 6 стр 6</span>
+          </li>
+        </ul>
+        <button class="btn contacts__btn bg_blue">Заказать звонок</button>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
     <div class="container">
       <div class="footer__container">
         <div class="footer__links">
@@ -512,7 +537,6 @@
         <p class="footer__text bold basis">
           ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "МК СМАРТИНВЕСТ"
 ИНН 9725002820, ОГРН 1197746118206 от 18 февраля 2019 г., Юр. Адрес: 115114, город Москва, Дербеневская наб, д. 7 стр. 2, этаж 3 офис 52
-Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положением ч. 2 ст. 437 Гражданского кодекса Российской Федерации.
         </p>
         <div class="footer__info">
           <p class="footer__text">
@@ -523,11 +547,50 @@
       </div>
       <div class="footer__info-toggle">
         <p class="footer__text">
-          Обращаем ваше внимание на то, что данный Интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации. Для получения подробной информации о стоимости автомобилей обращайтесь к менеджерам по продажам. Любая информация, содержащаяся на настоящем сайте, носит исключительно справочный характер и ни при каких обстоятельствах не может быть расценена как предложение заключить договор (публичная оферта). Дилер не дает гарантий по поводу своевременности, точности и полноты информации на веб-сайте, а также по поводу беспрепятственного доступа к нему в любое время. Технические характеристики и оборудование автомобилей, условия приобретения автомобилей, цены, спецпредложения и комплектации автомобилей, указанные на сайте, приведены для примера и могут быть изменены в любое время без предварительного уведомления. Для получения подробной информации об актуальных ценах на продукцию и наличии автомобилей обращайтесь в дилерский центр. Приобретение любой продукции бренда осуществляется в соответствии с условиями индивидуального договора купли-продажи. Представленное изображение автомобиля может отличаться от реализуемого. Не является публичной офертой. ПТС - Паспорт транспортного средства. На данном сайте используются зарегистрированные товарные знаки, перечисленные в разделе Правовая информация. Указана цена на автомобиль в начальной комплектации на автомобили 2022 модельного года. Для заказов с подтвержденной производственной к.н. 50/2021. Количество автомобилей ограничено. Размер платежа в день означает величину затрат заемщика, эквивалентную ежемесячному платежу при условии 30 (тридцати) календарных дней в месяце, взявшего кредит по программе кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее – «Банк») на покупку нового автомобиля с расчетной розничной ценой в начально комплектации, на срок 60 мес., с первоначальным взносом 57,92% от стоимости автомобиля, остаточным платежом (далее ОП) 20% от стоимости автомобиля и процентной ставкой 14,5%. Данная информация не является офертой Банка, расчет является приблизительным. Полная стоимость кредита и конкретные параметры кредита будут рассчитаны на основании Анкеты клиента, направляемой в Банк для одобрения кредитной заявки. Основные условия кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее Банк) на покупку нового автомобиля по продукту «Кредит с остаточным платежом на приобретение нового автомобиля» валюта кредита – рубли РФ; сумма кредита от 120 тыс. до 5.8 млн. ₽ Процентная ставка (в % годовых) при сроке от 12 до 60 мес. – 14,5% при первоначальном взносе (далее ПВ) от 15% (включительно). При ПВ менее 20% необходимо предоставление полного пакета документов. Минимальный размер остаточного платежа (далее ОП) в % от стоимости автомобиля – 20%; максимальный размер ОП при сроке при сроке кредита 12 мес. – 60%, при сроках от 13 до 24 мес. – 50%, при сроках от 25 до 36 мес. – 45%, при сроках от 37 до 48 мес. – 30%, при сроках от 49 до 60 мес. – 20%. Обеспечение по кредиту – залог приобретаемого автомобиля. Условия кредита действительны до 01.06.2022 и могут быть изменены Банком. Лицензия ЦБ РФ № 3500, г. Москва.
+          Для получения подробной информации о стоимости автомобилей обращайтесь к менеджерам по продажам. Любая информация, содержащаяся на настоящем сайте, носит исключительно справочный характер и ни при каких обстоятельствах не может быть расценена как предложение заключить договор (публичная оферта). Дилер не дает гарантий по поводу своевременности, точности и полноты информации на веб-сайте, а также по поводу беспрепятственного доступа к нему в любое время. Технические характеристики и оборудование автомобилей, условия приобретения автомобилей, цены, спецпредложения и комплектации автомобилей, указанные на сайте, приведены для примера и могут быть изменены в любое время без предварительного уведомления. Для получения подробной информации об актуальных ценах на продукцию и наличии автомобилей обращайтесь в дилерский центр. Приобретение любой продукции бренда осуществляется в соответствии с условиями индивидуального договора купли-продажи. Представленное изображение автомобиля может отличаться от реализуемого. Не является публичной офертой. ПТС - Паспорт транспортного средства. На данном сайте используются зарегистрированные товарные знаки, перечисленные в разделе Правовая информация. Указана цена на автомобиль в начальной комплектации на автомобили 2022 модельного года. Для заказов с подтвержденной производственной к.н. 50/2021. Количество автомобилей ограничено. Размер платежа в день означает величину затрат заемщика, эквивалентную ежемесячному платежу при условии 30 (тридцати) календарных дней в месяце, взявшего кредит по программе кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее – «Банк») на покупку нового автомобиля с расчетной розничной ценой в начально комплектации, на срок 60 мес., с первоначальным взносом 57,92% от стоимости автомобиля, остаточным платежом (далее ОП) 20% от стоимости автомобиля и процентной ставкой 14,5%. Данная информация не является офертой Банка, расчет является приблизительным. Полная стоимость кредита и конкретные параметры кредита будут рассчитаны на основании Анкеты клиента, направляемой в Банк для одобрения кредитной заявки. Основные условия кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее Банк) на покупку нового автомобиля по продукту «Кредит с остаточным платежом на приобретение нового автомобиля» валюта кредита – рубли РФ; сумма кредита от 120 тыс. до 5.8 млн. ₽ Процентная ставка (в % годовых) при сроке от 12 до 60 мес. – 14,5% при первоначальном взносе (далее ПВ) от 15% (включительно). При ПВ менее 20% необходимо предоставление полного пакета документов. Минимальный размер остаточного платежа (далее ОП) в % от стоимости автомобиля – 20%; максимальный размер ОП при сроке при сроке кредита 12 мес. – 60%, при сроках от 13 до 24 мес. – 50%, при сроках от 25 до 36 мес. – 45%, при сроках от 37 до 48 мес. – 30%, при сроках от 49 до 60 мес. – 20%. Обеспечение по кредиту – залог приобретаемого автомобиля. Условия кредита действительны до 01.06.2022 и могут быть изменены Банком. Лицензия ЦБ РФ № 3500, г. Москва.
         </p>
       </div>
     </div>
-  </footer> -->
+  </footer>
+  <div class="popup" id="modalSpecial">
+    <div class="popup__container">
+      <span class="popup__head">Специальные условия 
+        по кредиту на <span class="big_text">jetta</span>
+      </span>
+      <div class="popup__info">
+        <span class="popup__info-text">Льготная ставка от 4,9%</span>
+      </div>
+      <ul class="popup__list">
+        <li class="popup__list-item">
+          <span>- Без первоначального взноса </span>
+        </li>
+        <li class="popup__list-item">
+          <span>- Оформление по <b> 2-м документам  </b></span>
+        </li>
+        <li class="popup__list-item">
+          <span>- Досрочное погашение <b> без штрафов</b></span>
+        </li>
+      </ul>
+      <form action="" class="popup__form">
+        <div class="popup__form-inputs">
+          <input type="text" name="name" class="popup__form-input" placeholder="Имя">
+          <input type="tel" name="phone" class="popup__form-input" placeholder="+7 (____) ____-__-__" required>
+        </div>
+        <button class="btn bg_blue popup__form-btn">Отправить заявку</button>
+        <div class="form-checkbox">
+          <label class="checkbox__input-text" for="check-credit-pop">
+            <span class="checkbox">
+              <input class="form__input-check" type="checkbox" id="check-credit-pop" checked="" required="">
+              <span class="custom-checkbox"></span>
+            </span>
+            <span class="checkbox-text">
+              Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
+  </div>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/swiper-bundle.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
